CORE-2376: Fixing alignment issue for category filter.

--- a/docroot/themes/custom/transac/alshaya_white_label/sass/components/facet/_facet.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/components/facet/_facet.scss
@@ -122,12 +122,6 @@ ul[data-drupal-facet-id=category] {
   .facet-item--expanded {
     margin-#{$left}: 1rem;
 
-    ul {
-      html[lang=ar] & {
-        padding-top: 0;
-      }
-    }
-
     > ul {
       > .facet-item--collapsed {
         > label {
@@ -143,6 +137,10 @@ ul[data-drupal-facet-id=category] {
 
       .facet-item {
         margin-#{$left}: 1rem;
+
+        html[lang=ar] & {
+          margin-left: 0;
+        }
 
         &.facet-item--collapsed,
         &.facet-item--expanded {
@@ -160,6 +158,7 @@ ul[data-drupal-facet-id=category] {
 
           span {
             font-weight: bold;
+            margin-#{$left}: 0;
           }
         }
       }
@@ -184,6 +183,15 @@ ul[data-drupal-facet-id=category] {
 
       span {
         font-weight: bold;
+      }
+    }
+  }
+
+  .facet-item {
+    label {
+      .facet-item__count,
+      .facet-item__value {
+        display: inline-block;
       }
     }
   }
